methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:9: error: value avance is not a member of Unit
possible cause: maybe a semicolon is missing before `value avance'?
    }avance()
     ^MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  while (x==false){
  ^